--- a/Harden System Security/Strings/AR/Resources.resw
+++ b/Harden System Security/Strings/AR/Resources.resw
@@ -2529,25 +2529,7 @@
 <data name="VerifyingMicrosoft365AppsSecurityBaseline" xml:space="preserve">
   <value>التحقق من خط الأساس الأمني لتطبيقات Microsoft 365...</value>
 </data>
-<data name="ResetURLButton.Content" xml:space="preserve">
-    <value>إعادة تعيين</value>
-  </data>
-  <data name="ResetURLButton.ToolTipService.ToolTip" xml:space="preserve">
-    <value>إعادة تعيين رابط التحميل إلى القيمة الافتراضية.</value>
-  </data>
-  <data name="ResetURLButton.AutomationProperties.HelpText" xml:space="preserve">
-   <value>إعادة تعيين رابط التحميل إلى القيمة الافتراضية.</value>
-  </data>
-  <data name="DownloadURLButtonText.Text" xml:space="preserve">
-    <value>رابط التحميل</value>
-  </data>
-  <data name="DownloadURLButton.ToolTipService.ToolTip" xml:space="preserve">
-    <value>عرض وإدارة رابط تحميل خط الأساس.</value>
-  </data>
-  <data name="DownloadURLButton.AutomationProperties.HelpText" xml:space="preserve">
-   <value>عرض وإدارة رابط تحميل خط الأساس.</value>
-  </data>
-   <data name="AddCountryFirewallRulesButton.Content" xml:space="preserve">
+<data name="AddCountryFirewallRulesButton.Content" xml:space="preserve">
     <value>إضافة</value>
   </data>
   <data name="AddCountryFirewallRulesButton.ToolTipService.ToolTip" xml:space="preserve">
@@ -3731,5 +3713,242 @@
   </data>
   <data name="OptimizeMemoryButton.AutomationProperties.HelpText" xml:space="preserve">
     <value>محاولة تقليل استهلاك الذاكرة عبر جمع الذاكرة المُدارة غير المستخدمة وضغطها (بما في ذلك الكائنات الكبيرة). قد يقوم نظام التشغيل بإطلاق ذاكرة RAM تدريجياً، لذا قد لا تظهر التغييرات مباشرة. راجع السجلات بعد الضغط على هذا الزر لمزيد من التفاصيل.</value>
+  </data>
+    <data name="SecurityBaselinesComboBox.ToolTipService.ToolTip" xml:space="preserve">
+    <value>اختر خط الأساس للأمان من Microsoft الذي تريد استخدامه.</value>
+  </data>
+  <data name="SecurityBaselinesComboBox.AutomationProperties.HelpText" xml:space="preserve">
+    <value>اختر خط الأساس للأمان من Microsoft الذي تريد استخدامه.</value>
+  </data>
+  <data name="RetrieveButton.Content" xml:space="preserve">
+    <value>استرداد</value>
+  </data>
+<data name="CryptoAlgorithmsTab.Header" xml:space="preserve">
+  <value>الخوارزميات</value>
+</data>
+<data name="CngCurvesTab.Header" xml:space="preserve">
+  <value>منحنيات CNG</value>
+</data>
+<data name="SslProviderCurvesTab.Header" xml:space="preserve">
+  <value>منحنيات مزودي SSL</value>
+</data>
+<data name="TlsCipherSuitesTab.Header" xml:space="preserve">
+  <value>مجموعات التشفير TLS</value>
+</data>
+<data name="RegisteredProvidersTab.Header" xml:space="preserve">
+  <value>المزوّدون المسجلون</value>
+</data>
+<data name="ConfiguredOnlyToggleSwitch.OnContent" xml:space="preserve">
+  <value>المكوّنة فقط</value>
+</data>
+<data name="ConfiguredOnlyToggleSwitch.OffContent" xml:space="preserve">
+  <value>الكل</value>
+</data>
+<data name="CA_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>الاسم</value>
+</data>
+<data name="CA_TypeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>النوع</value>
+</data>
+<data name="CA_FlagsColumnHeaderBtn.Content" xml:space="preserve">
+  <value>الأعلام</value>
+</data>
+<data name="CA_IsOpenableColumnHeaderBtn.Content" xml:space="preserve">
+  <value>قابل للفتح</value>
+</data>
+<data name="CA_IsPQColumnHeaderBtn.Content" xml:space="preserve">
+  <value>ما بعد الكم</value>
+</data>
+<data name="CA_KeyGenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>إنشاء المفاتيح</value>
+</data>
+<data name="CA_ParamSetsColumnHeaderBtn.Content" xml:space="preserve">
+  <value>مجموعات المعلمات</value>
+</data>
+<data name="CNG_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>الاسم</value>
+</data>
+<data name="CNG_OidColumnHeaderBtn.Content" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="CNG_LengthColumnHeaderBtn.Content" xml:space="preserve">
+  <value>بتّات المفتاح العام</value>
+</data>
+<data name="SSL_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>الاسم</value>
+</data>
+<data name="SSL_OidColumnHeaderBtn.Content" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="SSL_LengthColumnHeaderBtn.Content" xml:space="preserve">
+  <value>بتّات المفتاح العام</value>
+</data>
+<data name="SSL_TypeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>نوع المنحنى</value>
+</data>
+<data name="SSL_FlagsColumnHeaderBtn.Content" xml:space="preserve">
+  <value>الأعلام</value>
+</data>
+<data name="TLS_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>الاسم</value>
+</data>
+<data name="TLS_CipherColumnHeaderBtn.Content" xml:space="preserve">
+  <value>التشفير</value>
+</data>
+<data name="TLS_CSColumnHeaderBtn.Content" xml:space="preserve">
+  <value>مجموعة التشفير</value>
+</data>
+<data name="TLS_BaseCSColumnHeaderBtn.Content" xml:space="preserve">
+  <value>مجموعة التشفير الأساسية</value>
+</data>
+<data name="TLS_HashColumnHeaderBtn.Content" xml:space="preserve">
+  <value>التجزئة</value>
+</data>
+<data name="TLS_ExchangeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>تبادل المفاتيح</value>
+</data>
+<data name="TLS_CertColumnHeaderBtn.Content" xml:space="preserve">
+  <value>الشهادة</value>
+</data>
+<data name="TLS_CLenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>طول الشيفرة</value>
+</data>
+<data name="TLS_CBLenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>طول الكتلة</value>
+</data>
+<data name="TLS_HLenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>طول التجزئة</value>
+</data>
+<data name="TLS_MinExColumnHeaderBtn.Content" xml:space="preserve">
+  <value>الطول الأدنى للتبادل</value>
+</data>
+<data name="TLS_MaxExColumnHeaderBtn.Content" xml:space="preserve">
+  <value>الطول الأقصى للتبادل</value>
+</data>
+<data name="TLS_KeyTypeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>نوع المفتاح</value>
+</data>
+<data name="REG_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>الاسم</value>
+</data>
+  <data name="CBOMNavItem.Content" xml:space="preserve">
+    <value>كشف المكوّنات التشفيرية</value>
+  </data>
+    <data name="CBOMNavItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>يكشف كشف المكوّنات التشفيرية (CBOM) عن جرد على مستوى النظام لتشفير نظام التشغيل — الخوارزميات، والمنحنيات، ومجموعات التشفير، والمزوّدين — بما يعكس الوضع التشفيري للمنصة.</value>
+  </data>
+  <data name="CBOMNavItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>يكشف كشف المكوّنات التشفيرية (CBOM) عن جرد على مستوى النظام لتشفير نظام التشغيل — الخوارزميات، والمنحنيات، ومجموعات التشفير، والمزوّدين — بما يعكس الوضع التشفيري للمنصة.</value>
+  </data>
+  <data name="CBOMPageTitle.Text" xml:space="preserve">
+    <value>يوفّر كشف المكوّنات التشفيرية (CBOM) جردًا على مستوى النظام ونظرة تفحصية لتشفير نظام التشغيل، مبرزًا الخوارزميات والمنحنيات ومجموعات التشفير والمزوّدين التي تحدد الوضع التشفيري للمنصة. ومن خلال توحيد ما يعرضه نظام التشغيل، يقدّم شفافية شبيهة بـ SBOM لعالم التشفير: يتيح التدقيقات المبنية على الأدلة، وفحوصات الامتثال لخطوط الأساس، وكشف الانجراف عبر التحديثات، وتحديد البدائيات القديمة/الضعيفة، والتخطيط للانتقال إلى ما بعد الكم.</value>
+  </data>
+<data name="CA_NameHeader.Text" xml:space="preserve">
+  <value>الاسم</value>
+</data>
+<data name="CA_TypeHeader.Text" xml:space="preserve">
+  <value>النوع</value>
+</data>
+<data name="CA_FlagsHeader.Text" xml:space="preserve">
+  <value>الأعلام</value>
+</data>
+<data name="CA_IsOpenableHeader.Text" xml:space="preserve">
+  <value>قابل للفتح</value>
+</data>
+<data name="CA_IsPQHeader.Text" xml:space="preserve">
+  <value>ما بعد الكم</value>
+</data>
+<data name="CA_KeyGenHeader.Text" xml:space="preserve">
+  <value>إنشاء المفاتيح</value>
+</data>
+<data name="CA_ParamSetsHeader.Text" xml:space="preserve">
+  <value>مجموعات المعلمات</value>
+</data>
+<data name="CNG_NameHeader.Text" xml:space="preserve">
+  <value>الاسم</value>
+</data>
+<data name="CNG_OidHeader.Text" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="CNG_LengthHeader.Text" xml:space="preserve">
+  <value>بتّات المفتاح العام</value>
+</data>
+<data name="SSL_NameHeader.Text" xml:space="preserve">
+  <value>الاسم</value>
+</data>
+<data name="SSL_OidHeader.Text" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="SSL_LengthHeader.Text" xml:space="preserve">
+  <value>بتّات المفتاح العام</value>
+</data>
+<data name="SSL_TypeHeader.Text" xml:space="preserve">
+  <value>نوع المنحنى</value>
+</data>
+<data name="SSL_FlagsHeader.Text" xml:space="preserve">
+  <value>الأعلام</value>
+</data>
+<data name="TLS_NameHeader.Text" xml:space="preserve">
+  <value>الاسم</value>
+</data>
+<data name="TLS_CipherHeader.Text" xml:space="preserve">
+  <value>التشفير</value>
+</data>
+<data name="TLS_CSHeader.Text" xml:space="preserve">
+  <value>مجموعة التشفير</value>
+</data>
+<data name="TLS_BaseCSHeader.Text" xml:space="preserve">
+  <value>مجموعة التشفير الأساسية</value>
+</data>
+<data name="TLS_HashHeader.Text" xml:space="preserve">
+  <value>التجزئة</value>
+</data>
+<data name="TLS_ExchangeHeader.Text" xml:space="preserve">
+  <value>تبادل المفاتيح</value>
+</data>
+<data name="TLS_CertHeader.Text" xml:space="preserve">
+  <value>الشهادة</value>
+</data>
+<data name="TLS_CLenHeader.Text" xml:space="preserve">
+  <value>طول الشيفرة</value>
+</data>
+<data name="TLS_CBLenHeader.Text" xml:space="preserve">
+  <value>طول الكتلة</value>
+</data>
+<data name="TLS_HLenHeader.Text" xml:space="preserve">
+  <value>طول التجزئة</value>
+</data>
+<data name="TLS_MinExHeader.Text" xml:space="preserve">
+  <value>الطول الأدنى للتبادل</value>
+</data>
+<data name="TLS_MaxExHeader.Text" xml:space="preserve">
+  <value>الطول الأقصى للتبادل</value>
+</data>
+<data name="TLS_KeyTypeHeader.Text" xml:space="preserve">
+  <value>نوع المفتاح</value>
+</data>
+<data name="REG_NameHeader.Text" xml:space="preserve">
+  <value>الاسم</value>
+</data>
+  <data name="GenerateCBOMButton.Content" xml:space="preserve">
+    <value>إنشاء CBOM</value>
+  </data>
+  <data name="GenerateCBOMButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>أنشئ كشف المكوّنات التشفيرية للنظام الحالي.</value>
+  </data>
+  <data name="GenerateCBOMButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>أنشئ كشف المكوّنات التشفيرية للنظام الحالي.</value>
+  </data>
+  <data name="ViewSelectedFilesTextBlock.Text" xml:space="preserve">
+    <value>عرض الملفات التي حددتها.</value>
+  </data>
+  <data name="FileBrowseButton.Content" xml:space="preserve">
+    <value>استعراض</value>
+  </data>
+  <data name="FileBrowseButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>يفتح مربع حوار منتقي الملفات مما يتيح لك تحديد ملف/ملفات</value>
+  </data>
+  <data name="FileBrowseButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>يفتح مربع حوار منتقي الملفات مما يتيح لك تحديد ملف/ملفات</value>
   </data>
 </root>
