--- a/Harden System Security/Strings/he-IL/Resources.resw
+++ b/Harden System Security/Strings/he-IL/Resources.resw
@@ -2529,25 +2529,7 @@
 <data name="VerifyingMicrosoft365AppsSecurityBaseline" xml:space="preserve">
   <value>מאמת קו בסיס אבטחה של Microsoft 365 Apps...</value>
 </data>
-<data name="ResetURLButton.Content" xml:space="preserve">
-    <value>איפוס</value>
-  </data>
-  <data name="ResetURLButton.ToolTipService.ToolTip" xml:space="preserve">
-    <value>אפס את כתובת ההורדה חזרה לערך ברירת המחדל.</value>
-  </data>
-  <data name="ResetURLButton.AutomationProperties.HelpText" xml:space="preserve">
-   <value>אפס את כתובת ההורדה חזרה לערך ברירת המחדל.</value>
-  </data>
-  <data name="DownloadURLButtonText.Text" xml:space="preserve">
-    <value>כתובת הורדה</value>
-  </data>
-  <data name="DownloadURLButton.ToolTipService.ToolTip" xml:space="preserve">
-    <value>צפה ונהל את כתובת ההורדה של קו הבסיס.</value>
-  </data>
-  <data name="DownloadURLButton.AutomationProperties.HelpText" xml:space="preserve">
-   <value>צפה ונהל את כתובת ההורדה של קו הבסיס.</value>
-  </data>
-   <data name="AddCountryFirewallRulesButton.Content" xml:space="preserve">
+<data name="AddCountryFirewallRulesButton.Content" xml:space="preserve">
     <value>הוסף</value>
   </data>
   <data name="AddCountryFirewallRulesButton.ToolTipService.ToolTip" xml:space="preserve">
@@ -3731,5 +3713,242 @@
   </data>
   <data name="OptimizeMemoryButton.AutomationProperties.HelpText" xml:space="preserve">
     <value>ניסיון להפחית את השימוש בזיכרון באמצעות איסוף ודחיסה של זיכרון מנוהל שאינו בשימוש (כולל אובייקטים גדולים). מערכת ההפעלה עשויה לשחרר RAM בהדרגה, ולכן ייתכן שהשינויים לא יופיעו מיד. עיין ביומנים לאחר לחיצה על כפתור זה לקבלת פרטים נוספים.</value>
+  </data>
+    <data name="SecurityBaselinesComboBox.ToolTipService.ToolTip" xml:space="preserve">
+    <value>בחר את בסיס האבטחה של Microsoft שבו ברצונך להשתמש.</value>
+  </data>
+  <data name="SecurityBaselinesComboBox.AutomationProperties.HelpText" xml:space="preserve">
+    <value>בחר את בסיס האבטחה של Microsoft שבו ברצונך להשתמש.</value>
+  </data>
+  <data name="RetrieveButton.Content" xml:space="preserve">
+    <value>אחזר</value>
+  </data>
+<data name="CryptoAlgorithmsTab.Header" xml:space="preserve">
+  <value>אלגוריתמים</value>
+</data>
+<data name="CngCurvesTab.Header" xml:space="preserve">
+  <value>עקומות CNG</value>
+</data>
+<data name="SslProviderCurvesTab.Header" xml:space="preserve">
+  <value>עקומות ספקי SSL</value>
+</data>
+<data name="TlsCipherSuitesTab.Header" xml:space="preserve">
+  <value>חבילות צופן TLS</value>
+</data>
+<data name="RegisteredProvidersTab.Header" xml:space="preserve">
+  <value>ספקים רשומים</value>
+</data>
+<data name="ConfiguredOnlyToggleSwitch.OnContent" xml:space="preserve">
+  <value>מוגדרים בלבד</value>
+</data>
+<data name="ConfiguredOnlyToggleSwitch.OffContent" xml:space="preserve">
+  <value>הכול</value>
+</data>
+<data name="CA_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>שם</value>
+</data>
+<data name="CA_TypeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>סוג</value>
+</data>
+<data name="CA_FlagsColumnHeaderBtn.Content" xml:space="preserve">
+  <value>דגלים</value>
+</data>
+<data name="CA_IsOpenableColumnHeaderBtn.Content" xml:space="preserve">
+  <value>ניתן לפתיחה</value>
+</data>
+<data name="CA_IsPQColumnHeaderBtn.Content" xml:space="preserve">
+  <value>פוסט-קוונטי</value>
+</data>
+<data name="CA_KeyGenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>יצירת מפתח</value>
+</data>
+<data name="CA_ParamSetsColumnHeaderBtn.Content" xml:space="preserve">
+  <value>ערכות פרמטרים</value>
+</data>
+<data name="CNG_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>שם</value>
+</data>
+<data name="CNG_OidColumnHeaderBtn.Content" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="CNG_LengthColumnHeaderBtn.Content" xml:space="preserve">
+  <value>סיביות מפתח ציבורי</value>
+</data>
+<data name="SSL_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>שם</value>
+</data>
+<data name="SSL_OidColumnHeaderBtn.Content" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="SSL_LengthColumnHeaderBtn.Content" xml:space="preserve">
+  <value>סיביות מפתח ציבורי</value>
+</data>
+<data name="SSL_TypeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>סוג עקומה</value>
+</data>
+<data name="SSL_FlagsColumnHeaderBtn.Content" xml:space="preserve">
+  <value>דגלים</value>
+</data>
+<data name="TLS_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>שם</value>
+</data>
+<data name="TLS_CipherColumnHeaderBtn.Content" xml:space="preserve">
+  <value>צופן</value>
+</data>
+<data name="TLS_CSColumnHeaderBtn.Content" xml:space="preserve">
+  <value>חבילת צופן</value>
+</data>
+<data name="TLS_BaseCSColumnHeaderBtn.Content" xml:space="preserve">
+  <value>חבילת צופן בסיסית</value>
+</data>
+<data name="TLS_HashColumnHeaderBtn.Content" xml:space="preserve">
+  <value>גיבוב</value>
+</data>
+<data name="TLS_ExchangeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>החלפת מפתחות</value>
+</data>
+<data name="TLS_CertColumnHeaderBtn.Content" xml:space="preserve">
+  <value>תעודה</value>
+</data>
+<data name="TLS_CLenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>אורך צופן</value>
+</data>
+<data name="TLS_CBLenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>אורך בלוק</value>
+</data>
+<data name="TLS_HLenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>אורך גיבוב</value>
+</data>
+<data name="TLS_MinExColumnHeaderBtn.Content" xml:space="preserve">
+  <value>אורך החלפה מינימלי</value>
+</data>
+<data name="TLS_MaxExColumnHeaderBtn.Content" xml:space="preserve">
+  <value>אורך החלפה מקסימלי</value>
+</data>
+<data name="TLS_KeyTypeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>סוג מפתח</value>
+</data>
+<data name="REG_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>שם</value>
+</data>
+  <data name="CBOMNavItem.Content" xml:space="preserve">
+    <value>רשימת רכיבים קריפטוגרפית</value>
+  </data>
+    <data name="CBOMNavItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>רשימת הרכיבים הקריפטוגרפית (CBOM) מספקת מלאי ברמת מערכת של הקריפטוגרפיה של מערכת ההפעלה — אלגוריתמים, עקומות, חבילות צופן וספקים — ומשקפת את העמדה הקריפטוגרפית של הפלטפורמה.</value>
+  </data>
+  <data name="CBOMNavItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>רשימת הרכיבים הקריפטוגרפית (CBOM) מספקת מלאי ברמת מערכת של הקריפטוגרפיה של מערכת ההפעלה — אלגוריתמים, עקומות, חבילות צופן וספקים — ומשקפת את העמדה הקריפטוגרפית של הפלטפורמה.</value>
+  </data>
+  <data name="CBOMPageTitle.Text" xml:space="preserve">
+    <value>רשימת הרכיבים הקריפטוגרפית (CBOM) מספקת מלאי ברמת מערכת ובחינה פנימית של הקריפטוגרפיה של מערכת ההפעלה, ומציגה את האלגוריתמים, העקומות, חבילות הצופן והספקים המגדירים את העמדה הקריפטוגרפית של הפלטפורמה. באמצעות נרמול המידע שמערכת ההפעלה חושפת, היא מספקת שקיפות בסגנון SBOM לעולם הקריפטוגרפיה: מאפשרת ביקורות מבוססות ראיות, בדיקות תאימות לקווי בסיס, זיהוי סטיות לאורך עדכונים, איתור פרימיטיבים מיושנים/חלשים ותכנון למעברים פוסט-קוונטיים.</value>
+  </data>
+<data name="CA_NameHeader.Text" xml:space="preserve">
+  <value>שם</value>
+</data>
+<data name="CA_TypeHeader.Text" xml:space="preserve">
+  <value>סוג</value>
+</data>
+<data name="CA_FlagsHeader.Text" xml:space="preserve">
+  <value>דגלים</value>
+</data>
+<data name="CA_IsOpenableHeader.Text" xml:space="preserve">
+  <value>ניתן לפתיחה</value>
+</data>
+<data name="CA_IsPQHeader.Text" xml:space="preserve">
+  <value>פוסט-קוונטי</value>
+</data>
+<data name="CA_KeyGenHeader.Text" xml:space="preserve">
+  <value>יצירת מפתח</value>
+</data>
+<data name="CA_ParamSetsHeader.Text" xml:space="preserve">
+  <value>ערכות פרמטרים</value>
+</data>
+<data name="CNG_NameHeader.Text" xml:space="preserve">
+  <value>שם</value>
+</data>
+<data name="CNG_OidHeader.Text" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="CNG_LengthHeader.Text" xml:space="preserve">
+  <value>סיביות מפתח ציבורי</value>
+</data>
+<data name="SSL_NameHeader.Text" xml:space="preserve">
+  <value>שם</value>
+</data>
+<data name="SSL_OidHeader.Text" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="SSL_LengthHeader.Text" xml:space="preserve">
+  <value>סיביות מפתח ציבורי</value>
+</data>
+<data name="SSL_TypeHeader.Text" xml:space="preserve">
+  <value>סוג עקומה</value>
+</data>
+<data name="SSL_FlagsHeader.Text" xml:space="preserve">
+  <value>דגלים</value>
+</data>
+<data name="TLS_NameHeader.Text" xml:space="preserve">
+  <value>שם</value>
+</data>
+<data name="TLS_CipherHeader.Text" xml:space="preserve">
+  <value>צופן</value>
+</data>
+<data name="TLS_CSHeader.Text" xml:space="preserve">
+  <value>חבילת צופן</value>
+</data>
+<data name="TLS_BaseCSHeader.Text" xml:space="preserve">
+  <value>חבילת צופן בסיסית</value>
+</data>
+<data name="TLS_HashHeader.Text" xml:space="preserve">
+  <value>גיבוב</value>
+</data>
+<data name="TLS_ExchangeHeader.Text" xml:space="preserve">
+  <value>החלפת מפתחות</value>
+</data>
+<data name="TLS_CertHeader.Text" xml:space="preserve">
+  <value>תעודה</value>
+</data>
+<data name="TLS_CLenHeader.Text" xml:space="preserve">
+  <value>אורך צופן</value>
+</data>
+<data name="TLS_CBLenHeader.Text" xml:space="preserve">
+  <value>אורך בלוק</value>
+</data>
+<data name="TLS_HLenHeader.Text" xml:space="preserve">
+  <value>אורך גיבוב</value>
+</data>
+<data name="TLS_MinExHeader.Text" xml:space="preserve">
+  <value>אורך החלפה מינימלי</value>
+</data>
+<data name="TLS_MaxExHeader.Text" xml:space="preserve">
+  <value>אורך החלפה מקסימלי</value>
+</data>
+<data name="TLS_KeyTypeHeader.Text" xml:space="preserve">
+  <value>סוג מפתח</value>
+</data>
+<data name="REG_NameHeader.Text" xml:space="preserve">
+  <value>שם</value>
+</data>
+  <data name="GenerateCBOMButton.Content" xml:space="preserve">
+    <value>צור CBOM</value>
+  </data>
+  <data name="GenerateCBOMButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>צור את רשימת הרכיבים הקריפטוגרפית למערכת הנוכחית.</value>
+  </data>
+  <data name="GenerateCBOMButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>צור את רשימת הרכיבים הקריפטוגרפית למערכת הנוכחית.</value>
+  </data>
+  <data name="ViewSelectedFilesTextBlock.Text" xml:space="preserve">
+    <value>הצג את הקבצים שבחרת.</value>
+  </data>
+  <data name="FileBrowseButton.Content" xml:space="preserve">
+    <value>עיון</value>
+  </data>
+  <data name="FileBrowseButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>פותח את תיבת הדו-שיח לבחירת קבצים, המאפשרת לך לבחור קובץ/קבצים</value>
+  </data>
+  <data name="FileBrowseButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>פותח את תיבת הדו-שיח לבחירת קבצים, המאפשרת לך לבחור קובץ/קבצים</value>
   </data>
 </root>
