--- a/Harden System Security/Strings/hi-IN/Resources.resw
+++ b/Harden System Security/Strings/hi-IN/Resources.resw
@@ -2529,25 +2529,7 @@
 <data name="VerifyingMicrosoft365AppsSecurityBaseline" xml:space="preserve">
   <value>Microsoft 365 Apps सुरक्षा आधारभूत सत्यापित की जा रही है...</value>
 </data>
-<data name="ResetURLButton.Content" xml:space="preserve">
-    <value>रीसेट</value>
-  </data>
-  <data name="ResetURLButton.ToolTipService.ToolTip" xml:space="preserve">
-    <value>डाउनलोड URL को डिफ़ॉल्ट मान पर रीसेट करें।</value>
-  </data>
-  <data name="ResetURLButton.AutomationProperties.HelpText" xml:space="preserve">
-   <value>डाउनलोड URL को डिफ़ॉल्ट मान पर रीसेट करें।</value>
-  </data>
-  <data name="DownloadURLButtonText.Text" xml:space="preserve">
-    <value>डाउनलोड URL</value>
-  </data>
-  <data name="DownloadURLButton.ToolTipService.ToolTip" xml:space="preserve">
-    <value>आधारभूत के डाउनलोड URL को देखें और प्रबंधित करें।</value>
-  </data>
-  <data name="DownloadURLButton.AutomationProperties.HelpText" xml:space="preserve">
-   <value>आधारभूत के डाउनलोड URL को देखें और प्रबंधित करें।</value>
-  </data>
-   <data name="AddCountryFirewallRulesButton.Content" xml:space="preserve">
+<data name="AddCountryFirewallRulesButton.Content" xml:space="preserve">
     <value>जोड़ें</value>
   </data>
   <data name="AddCountryFirewallRulesButton.ToolTipService.ToolTip" xml:space="preserve">
@@ -3731,5 +3713,242 @@
   </data>
   <data name="OptimizeMemoryButton.AutomationProperties.HelpText" xml:space="preserve">
     <value>अप्रयुक्त प्रबंधित मेमोरी (बड़े ऑब्जेक्ट सहित) को एकत्रित और कॉम्पैक्ट करके मेमोरी उपयोग कम करने का प्रयास। OS RAM को धीरे-धीरे रिलीज़ कर सकता है, इसलिए परिवर्तन तुरंत दिखाई नहीं भी दें। इस बटन को दबाने के बाद अधिक विवरण के लिए लॉग्स देखें।</value>
+  </data>
+    <data name="SecurityBaselinesComboBox.ToolTipService.ToolTip" xml:space="preserve">
+    <value>वह Microsoft सुरक्षा बेसलाइन चुनें जिसे आप उपयोग करना चाहते हैं.</value>
+  </data>
+  <data name="SecurityBaselinesComboBox.AutomationProperties.HelpText" xml:space="preserve">
+    <value>वह Microsoft सुरक्षा बेसलाइन चुनें जिसे आप उपयोग करना चाहते हैं.</value>
+  </data>
+  <data name="RetrieveButton.Content" xml:space="preserve">
+    <value>प्राप्त करें</value>
+  </data>
+<data name="CryptoAlgorithmsTab.Header" xml:space="preserve">
+  <value>एल्गोरिदम</value>
+</data>
+<data name="CngCurvesTab.Header" xml:space="preserve">
+  <value>CNG वक्र</value>
+</data>
+<data name="SslProviderCurvesTab.Header" xml:space="preserve">
+  <value>SSL प्रदाता वक्र</value>
+</data>
+<data name="TlsCipherSuitesTab.Header" xml:space="preserve">
+  <value>TLS सिफर सूट</value>
+</data>
+<data name="RegisteredProvidersTab.Header" xml:space="preserve">
+  <value>पंजीकृत प्रदाता</value>
+</data>
+<data name="ConfiguredOnlyToggleSwitch.OnContent" xml:space="preserve">
+  <value>केवल कॉन्फ़िगर किए गए</value>
+</data>
+<data name="ConfiguredOnlyToggleSwitch.OffContent" xml:space="preserve">
+  <value>सभी</value>
+</data>
+<data name="CA_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>नाम</value>
+</data>
+<data name="CA_TypeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>प्रकार</value>
+</data>
+<data name="CA_FlagsColumnHeaderBtn.Content" xml:space="preserve">
+  <value>फ्लैग्स</value>
+</data>
+<data name="CA_IsOpenableColumnHeaderBtn.Content" xml:space="preserve">
+  <value>खोलने योग्य</value>
+</data>
+<data name="CA_IsPQColumnHeaderBtn.Content" xml:space="preserve">
+  <value>पोस्ट-क्वांटम</value>
+</data>
+<data name="CA_KeyGenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>कुंजी निर्माण</value>
+</data>
+<data name="CA_ParamSetsColumnHeaderBtn.Content" xml:space="preserve">
+  <value>पैरामीटर सेट</value>
+</data>
+<data name="CNG_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>नाम</value>
+</data>
+<data name="CNG_OidColumnHeaderBtn.Content" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="CNG_LengthColumnHeaderBtn.Content" xml:space="preserve">
+  <value>सार्वजनिक कुंजी बिट्स</value>
+</data>
+<data name="SSL_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>नाम</value>
+</data>
+<data name="SSL_OidColumnHeaderBtn.Content" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="SSL_LengthColumnHeaderBtn.Content" xml:space="preserve">
+  <value>सार्वजनिक कुंजी बिट्स</value>
+</data>
+<data name="SSL_TypeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>वक्र प्रकार</value>
+</data>
+<data name="SSL_FlagsColumnHeaderBtn.Content" xml:space="preserve">
+  <value>फ्लैग्स</value>
+</data>
+<data name="TLS_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>नाम</value>
+</data>
+<data name="TLS_CipherColumnHeaderBtn.Content" xml:space="preserve">
+  <value>सिफर</value>
+</data>
+<data name="TLS_CSColumnHeaderBtn.Content" xml:space="preserve">
+  <value>सिफर सूट</value>
+</data>
+<data name="TLS_BaseCSColumnHeaderBtn.Content" xml:space="preserve">
+  <value>बेस सिफर सूट</value>
+</data>
+<data name="TLS_HashColumnHeaderBtn.Content" xml:space="preserve">
+  <value>हैश</value>
+</data>
+<data name="TLS_ExchangeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>कुंजी विनिमय</value>
+</data>
+<data name="TLS_CertColumnHeaderBtn.Content" xml:space="preserve">
+  <value>प्रमाणपत्र</value>
+</data>
+<data name="TLS_CLenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>सिफर लंबाई</value>
+</data>
+<data name="TLS_CBLenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>ब्लॉक लंबाई</value>
+</data>
+<data name="TLS_HLenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>हैश लंबाई</value>
+</data>
+<data name="TLS_MinExColumnHeaderBtn.Content" xml:space="preserve">
+  <value>न्यूनतम विनिमय लंबाई</value>
+</data>
+<data name="TLS_MaxExColumnHeaderBtn.Content" xml:space="preserve">
+  <value>अधिकतम विनिमय लंबाई</value>
+</data>
+<data name="TLS_KeyTypeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>कुंजी प्रकार</value>
+</data>
+<data name="REG_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>नाम</value>
+</data>
+  <data name="CBOMNavItem.Content" xml:space="preserve">
+    <value>क्रिप्टोग्राफ़िक बिल ऑफ़ मैटेरियल्स</value>
+  </data>
+    <data name="CBOMNavItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>क्रिप्टोग्राफ़िक बिल ऑफ़ मैटेरियल्स (CBOM) ऑपरेटिंग सिस्टम की क्रिप्टोग्राफ़ी — एल्गोरिदम, वक्र, सिफर सूट और प्रदाता — का सिस्टम-स्तरीय इन्वेंटरी प्रदान करता है, जिससे प्लेटफ़ॉर्म की क्रिप्टोग्राफ़िक मुद्रा परिलक्षित होती है.</value>
+  </data>
+  <data name="CBOMNavItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>क्रिप्टोग्राफ़िक बिल ऑफ़ मैटेरियल्स (CBOM) ऑपरेटिंग सिस्टम की क्रिप्टोग्राफ़ी — एल्गोरिदम, वक्र, सिफर सूट और प्रदाता — का सिस्टम-स्तरीय इन्वेंटरी प्रदान करता है, जिससे प्लेटफ़ॉर्म की क्रिप्टोग्राफ़िक मुद्रा परिलक्षित होती है.</value>
+  </data>
+  <data name="CBOMPageTitle.Text" xml:space="preserve">
+    <value>क्रिप्टोग्राफ़िक बिल ऑफ़ मैटेरियल्स (CBOM) सिस्टम-स्तरीय इन्वेंटरी और ऑपरेटिंग सिस्टम की क्रिप्टोग्राफ़ी का अंतर्दर्शन प्रदान करता है, जिससे वे एल्गोरिदम, वक्र, सिफर सूट और प्रदाता सामने आते हैं जो प्लेटफ़ॉर्म की क्रिप्टोग्राफ़िक मुद्रा को परिभाषित करते हैं. OS जो उजागर करता है उसे सामान्यीकृत करके, यह क्रिप्टो के लिए SBOM-जैसी पारदर्शिता प्रदान करता है: साक्ष्य-आधारित ऑडिट, बेसलाइन अनुपालन जांच, अपडेट्स के दौरान ड्रिफ्ट का पता लगाना, पुरानी/कमज़ोर प्रिमिटिव्स की पहचान, और पोस्ट-क्वांटम संक्रमणों की योजना.</value>
+  </data>
+<data name="CA_NameHeader.Text" xml:space="preserve">
+  <value>नाम</value>
+</data>
+<data name="CA_TypeHeader.Text" xml:space="preserve">
+  <value>प्रकार</value>
+</data>
+<data name="CA_FlagsHeader.Text" xml:space="preserve">
+  <value>फ्लैग्स</value>
+</data>
+<data name="CA_IsOpenableHeader.Text" xml:space="preserve">
+  <value>खोलने योग्य</value>
+</data>
+<data name="CA_IsPQHeader.Text" xml:space="preserve">
+  <value>पोस्ट-क्वांटम</value>
+</data>
+<data name="CA_KeyGenHeader.Text" xml:space="preserve">
+  <value>कुंजी निर्माण</value>
+</data>
+<data name="CA_ParamSetsHeader.Text" xml:space="preserve">
+  <value>पैरामीटर सेट</value>
+</data>
+<data name="CNG_NameHeader.Text" xml:space="preserve">
+  <value>नाम</value>
+</data>
+<data name="CNG_OidHeader.Text" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="CNG_LengthHeader.Text" xml:space="preserve">
+  <value>सार्वजनिक कुंजी बिट्स</value>
+</data>
+<data name="SSL_NameHeader.Text" xml:space="preserve">
+  <value>नाम</value>
+</data>
+<data name="SSL_OidHeader.Text" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="SSL_LengthHeader.Text" xml:space="preserve">
+  <value>सार्वजनिक कुंजी बिट्स</value>
+</data>
+<data name="SSL_TypeHeader.Text" xml:space="preserve">
+  <value>वक्र प्रकार</value>
+</data>
+<data name="SSL_FlagsHeader.Text" xml:space="preserve">
+  <value>फ्लैग्स</value>
+</data>
+<data name="TLS_NameHeader.Text" xml:space="preserve">
+  <value>नाम</value>
+</data>
+<data name="TLS_CipherHeader.Text" xml:space="preserve">
+  <value>सिफर</value>
+</data>
+<data name="TLS_CSHeader.Text" xml:space="preserve">
+  <value>सिफर सूट</value>
+</data>
+<data name="TLS_BaseCSHeader.Text" xml:space="preserve">
+  <value>बेस सिफर सूट</value>
+</data>
+<data name="TLS_HashHeader.Text" xml:space="preserve">
+  <value>हैश</value>
+</data>
+<data name="TLS_ExchangeHeader.Text" xml:space="preserve">
+  <value>कुंजी विनिमय</value>
+</data>
+<data name="TLS_CertHeader.Text" xml:space="preserve">
+  <value>प्रमाणपत्र</value>
+</data>
+<data name="TLS_CLenHeader.Text" xml:space="preserve">
+  <value>सिफर लंबाई</value>
+</data>
+<data name="TLS_CBLenHeader.Text" xml:space="preserve">
+  <value>ब्लॉक लंबाई</value>
+</data>
+<data name="TLS_HLenHeader.Text" xml:space="preserve">
+  <value>हैश लंबाई</value>
+</data>
+<data name="TLS_MinExHeader.Text" xml:space="preserve">
+  <value>न्यूनतम विनिमय लंबाई</value>
+</data>
+<data name="TLS_MaxExHeader.Text" xml:space="preserve">
+  <value>अधिकतम विनिमय लंबाई</value>
+</data>
+<data name="TLS_KeyTypeHeader.Text" xml:space="preserve">
+  <value>कुंजी प्रकार</value>
+</data>
+<data name="REG_NameHeader.Text" xml:space="preserve">
+  <value>नाम</value>
+</data>
+  <data name="GenerateCBOMButton.Content" xml:space="preserve">
+    <value>CBOM उत्पन्न करें</value>
+  </data>
+  <data name="GenerateCBOMButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>वर्तमान सिस्टम के लिए क्रिप्टोग्राफ़िक बिल ऑफ़ मैटेरियल्स उत्पन्न करें.</value>
+  </data>
+  <data name="GenerateCBOMButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>वर्तमान सिस्टम के लिए क्रिप्टोग्राफ़िक बिल ऑफ़ मैटेरियल्स उत्पन्न करें.</value>
+  </data>
+  <data name="ViewSelectedFilesTextBlock.Text" xml:space="preserve">
+    <value>आपने जिन फ़ाइलों का चयन किया है उन्हें देखें.</value>
+  </data>
+  <data name="FileBrowseButton.Content" xml:space="preserve">
+    <value>ब्राउज़ करें</value>
+  </data>
+  <data name="FileBrowseButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>फ़ाइल पिकर डायलॉग खोलता है जो आपको file(s) चुनने की अनुमति देता है</value>
+  </data>
+  <data name="FileBrowseButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>फ़ाइल पिकर डायलॉग खोलता है जो आपको file(s) चुनने की अनुमति देता है</value>
   </data>
 </root>
