--- a/Harden System Security/Strings/ml-IN/Resources.resw
+++ b/Harden System Security/Strings/ml-IN/Resources.resw
@@ -2529,25 +2529,7 @@
 <data name="VerifyingMicrosoft365AppsSecurityBaseline" xml:space="preserve">
   <value>Microsoft 365 Apps സുരക്ഷാ അടിത്തറ പരിശോധിക്കുന്നു...</value>
 </data>
-<data name="ResetURLButton.Content" xml:space="preserve">
-    <value>പുനഃസജ്ജീകരിക്കുക</value>
-  </data>
-  <data name="ResetURLButton.ToolTipService.ToolTip" xml:space="preserve">
-    <value>ഡൗൺലോഡ് URL ഡിഫോൾട്ട് മൂല്യത്തിലേക്ക് പുനഃസജ്ജീകരിക്കുക.</value>
-  </data>
-  <data name="ResetURLButton.AutomationProperties.HelpText" xml:space="preserve">
-   <value>ഡൗൺലോഡ് URL ഡിഫോൾട്ട് മൂല്യത്തിലേക്ക് പുനഃസജ്ജീകരിക്കുക.</value>
-  </data>
-  <data name="DownloadURLButtonText.Text" xml:space="preserve">
-    <value>ഡൗൺലോഡ് URL</value>
-  </data>
-  <data name="DownloadURLButton.ToolTipService.ToolTip" xml:space="preserve">
-    <value>അടിത്തറയുടെ ഡൗൺലോഡ് URL കാണുകയും നിയന്ത്രിക്കുകയും ചെയ്യുക.</value>
-  </data>
-  <data name="DownloadURLButton.AutomationProperties.HelpText" xml:space="preserve">
-   <value>അടിത്തറയുടെ ഡൗൺലോഡ് URL കാണുകയും നിയന്ത്രിക്കുകയും ചെയ്യുക.</value>
-  </data>
-   <data name="AddCountryFirewallRulesButton.Content" xml:space="preserve">
+<data name="AddCountryFirewallRulesButton.Content" xml:space="preserve">
     <value>ചേർക്കുക</value>
   </data>
   <data name="AddCountryFirewallRulesButton.ToolTipService.ToolTip" xml:space="preserve">
@@ -3731,5 +3713,242 @@
   </data>
   <data name="OptimizeMemoryButton.AutomationProperties.HelpText" xml:space="preserve">
     <value>ഉപയോഗത്തിലില്ലാത്ത മാനേജുചെയ്യുന്ന മെമ്മറി (വലുതായ ഒബ്ജക്റ്റുകൾ ഉൾപ്പെടെ) ശേഖരിച്ചു കമ്പാക്റ്റ് ചെയ്ത് മെമ്മറി ഉപയോഗം കുറയ്ക്കാനുള്ള ശ്രമം. ഓ.എസ്. RAM ക്രമേണ റിലീസ് ചെയ്യാൻ സാധ്യതയുണ്ട്, അതിനാൽ മാറ്റങ്ങൾ ഉടൻ പ്രകടമാകണമെന്നില്ല. കൂടുതൽ വിവരങ്ങൾക്ക് ഈ ബട്ടൺ അമർത്തിയതിന് ശേഷം ലോഗുകൾ പരിശോധിക്കുക.</value>
+  </data>
+    <data name="SecurityBaselinesComboBox.ToolTipService.ToolTip" xml:space="preserve">
+    <value>നിങ്ങൾ ഉപയോഗിക്കാൻ ആഗ്രഹിക്കുന്ന Microsoft സുരക്ഷാ ബേസ്ലൈൻ തിരഞ്ഞെടുക്കുക.</value>
+  </data>
+  <data name="SecurityBaselinesComboBox.AutomationProperties.HelpText" xml:space="preserve">
+    <value>നിങ്ങൾ ഉപയോഗിക്കാൻ ആഗ്രഹിക്കുന്ന Microsoft സുരക്ഷാ ബേസ്ലൈൻ തിരഞ്ഞെടുക്കുക.</value>
+  </data>
+  <data name="RetrieveButton.Content" xml:space="preserve">
+    <value>പുനഃപ്രാപിക്കുക</value>
+  </data>
+<data name="CryptoAlgorithmsTab.Header" xml:space="preserve">
+  <value>ആൽഗൊരിതങ്ങൾ</value>
+</data>
+<data name="CngCurvesTab.Header" xml:space="preserve">
+  <value>CNG വക്രങ്ങൾ</value>
+</data>
+<data name="SslProviderCurvesTab.Header" xml:space="preserve">
+  <value>SSL പ്രൊവൈഡർ വക്രങ്ങൾ</value>
+</data>
+<data name="TlsCipherSuitesTab.Header" xml:space="preserve">
+  <value>TLS സൈഫർ സ്യൂട്ടുകൾ</value>
+</data>
+<data name="RegisteredProvidersTab.Header" xml:space="preserve">
+  <value>രജിസ്റ്റർ ചെയ്ത പ്രൊവൈഡർമാർ</value>
+</data>
+<data name="ConfiguredOnlyToggleSwitch.OnContent" xml:space="preserve">
+  <value>കോൺഫിഗർ ചെയ്തവ മാത്രം</value>
+</data>
+<data name="ConfiguredOnlyToggleSwitch.OffContent" xml:space="preserve">
+  <value>എല്ലാം</value>
+</data>
+<data name="CA_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>പേര്</value>
+</data>
+<data name="CA_TypeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>തരം</value>
+</data>
+<data name="CA_FlagsColumnHeaderBtn.Content" xml:space="preserve">
+  <value>ഫ്ലാഗുകൾ</value>
+</data>
+<data name="CA_IsOpenableColumnHeaderBtn.Content" xml:space="preserve">
+  <value>തുറക്കാവുന്നത്</value>
+</data>
+<data name="CA_IsPQColumnHeaderBtn.Content" xml:space="preserve">
+  <value>പോസ്റ്റ്-ക്വാണ്ടം</value>
+</data>
+<data name="CA_KeyGenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>കീ നിർമ്മാണം</value>
+</data>
+<data name="CA_ParamSetsColumnHeaderBtn.Content" xml:space="preserve">
+  <value>പാരാമീറ്റർ സെറ്റുകൾ</value>
+</data>
+<data name="CNG_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>പേര്</value>
+</data>
+<data name="CNG_OidColumnHeaderBtn.Content" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="CNG_LengthColumnHeaderBtn.Content" xml:space="preserve">
+  <value>പബ്ലിക് കീ ബിറ്റുകൾ</value>
+</data>
+<data name="SSL_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>പേര്</value>
+</data>
+<data name="SSL_OidColumnHeaderBtn.Content" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="SSL_LengthColumnHeaderBtn.Content" xml:space="preserve">
+  <value>പബ്ലിക് കീ ബിറ്റുകൾ</value>
+</data>
+<data name="SSL_TypeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>വക്രത്തിന്റെ തരം</value>
+</data>
+<data name="SSL_FlagsColumnHeaderBtn.Content" xml:space="preserve">
+  <value>ഫ്ലാഗുകൾ</value>
+</data>
+<data name="TLS_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>പേര്</value>
+</data>
+<data name="TLS_CipherColumnHeaderBtn.Content" xml:space="preserve">
+  <value>സൈഫർ</value>
+</data>
+<data name="TLS_CSColumnHeaderBtn.Content" xml:space="preserve">
+  <value>സൈഫർ സ്യൂട്ട്</value>
+</data>
+<data name="TLS_BaseCSColumnHeaderBtn.Content" xml:space="preserve">
+  <value>ബേസ് സൈഫർ സ്യൂട്ട്</value>
+</data>
+<data name="TLS_HashColumnHeaderBtn.Content" xml:space="preserve">
+  <value>ഹാഷ്</value>
+</data>
+<data name="TLS_ExchangeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>കീ കൈമാറ്റം</value>
+</data>
+<data name="TLS_CertColumnHeaderBtn.Content" xml:space="preserve">
+  <value>സർട്ടിഫിക്കറ്റ്</value>
+</data>
+<data name="TLS_CLenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>സൈഫർ നീളം</value>
+</data>
+<data name="TLS_CBLenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>ബ്ലോക്ക് നീളം</value>
+</data>
+<data name="TLS_HLenColumnHeaderBtn.Content" xml:space="preserve">
+  <value>ഹാഷ് നീളം</value>
+</data>
+<data name="TLS_MinExColumnHeaderBtn.Content" xml:space="preserve">
+  <value>കുറഞ്ഞ കൈമാറ്റ നീളം</value>
+</data>
+<data name="TLS_MaxExColumnHeaderBtn.Content" xml:space="preserve">
+  <value>പരമാവധി കൈമാറ്റ നീളം</value>
+</data>
+<data name="TLS_KeyTypeColumnHeaderBtn.Content" xml:space="preserve">
+  <value>കീ തരം</value>
+</data>
+<data name="REG_NameColumnHeaderBtn.Content" xml:space="preserve">
+  <value>പേര്</value>
+</data>
+  <data name="CBOMNavItem.Content" xml:space="preserve">
+    <value>ക്രിപ്റ്റോഗ്രാഫിക് ബിൽ ഓഫ് മെറ്റീരിയൽസ്</value>
+  </data>
+    <data name="CBOMNavItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>ക്രിപ്റ്റോഗ്രാഫിക് ബിൽ ഓഫ് മെറ്റീരിയൽസ് (CBOM) ഓ.എസ്. ക്രിപ്റ്റോഗ്രാഫിയുടെ സിസ്റ്റം-ലെവൽ ഇൻവെന്ററി — ആൽഗൊരിതങ്ങൾ, വക്രങ്ങൾ, സൈഫർ സ്യൂട്ടുകൾ, പ്രൊവൈഡർമാർ — നൽകുന്നു, പ്ലാറ്റ്‌ഫോമിന്റെ ക്രിപ്റ്റോഗ്രാഫിക് നിലപാട് രേഖപ്പെടുത്തുന്നു.</value>
+  </data>
+  <data name="CBOMNavItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>ക്രിപ്റ്റോഗ്രാഫിക് ബിൽ ഓഫ് മെറ്റീരിയൽസ് (CBOM) ഓ.എസ്. ക്രിപ്റ്റോഗ്രാഫിയുടെ സിസ്റ്റം-ലെവൽ ഇൻവെന്ററി — ആൽഗൊരിതങ്ങൾ, വക്രങ്ങൾ, സൈഫർ സ്യൂട്ടുകൾ, പ്രൊവൈഡർമാർ — നൽകുന്നു, പ്ലാറ്റ്‌ഫോമിന്റെ ക്രിപ്റ്റോഗ്രാഫിക് നിലപാട് രേഖപ്പെടുത്തുന്നു.</value>
+  </data>
+  <data name="CBOMPageTitle.Text" xml:space="preserve">
+    <value>ക്രിപ്റ്റോഗ്രാഫിക് ബിൽ ഓഫ് മെറ്റീരിയൽസ് (CBOM) ഓപ്പറേറ്റിംഗ് സിസ്റ്റം ക്രിപ്റ്റോഗ്രാഫിയുടെ സിസ്റ്റം-ലെവൽ ഇൻവെന്ററിയും ആന്തരാവലോകനവും നൽകുന്നു, പ്ലാറ്റ്‌ഫോം നിർവചിക്കുന്ന ആൽഗൊരിതങ്ങൾ, വക്രങ്ങൾ, സൈഫർ സ്യൂട്ടുകൾ, പ്രൊവൈഡർമാർ എന്നിവയെ പ്രത്യക്ഷപ്പെടുത്തുന്നു. ഓ.എസ്. പുറത്തുവിടുന്നതിനെ സാധാരണമാക്കുന്നതിലൂടെ, ഇത് ക്രിപ്റ്റോ മേഖലക്ക് SBOM പോലുള്ള വ്യക്തത നൽകുന്നു: തെളിവ്-അധിഷ്ഠിത ഓഡിറ്റുകൾ, ബേസ്ലൈൻ അനുയോജ്യത പരിശോധനകൾ, അപ്‌ഡേറ്റുകളിലുടനീളം ഡ്രിഫ്റ്റ് കണ്ടെത്തൽ, പരമ്പരാഗത/ദുർബല പ്രിമിറ്റീവുകളുടെ തിരിച്ചറിവ്, പോസ്റ്റ്-ക്വാണ്ടം മാറലുകൾക്കുള്ള പദ്ധതിയിടൽ.</value>
+  </data>
+<data name="CA_NameHeader.Text" xml:space="preserve">
+  <value>പേര്</value>
+</data>
+<data name="CA_TypeHeader.Text" xml:space="preserve">
+  <value>തരം</value>
+</data>
+<data name="CA_FlagsHeader.Text" xml:space="preserve">
+  <value>ഫ്ലാഗുകൾ</value>
+</data>
+<data name="CA_IsOpenableHeader.Text" xml:space="preserve">
+  <value>തുറക്കാവുന്നത്</value>
+</data>
+<data name="CA_IsPQHeader.Text" xml:space="preserve">
+  <value>പോസ്റ്റ്-ക്വാണ്ടം</value>
+</data>
+<data name="CA_KeyGenHeader.Text" xml:space="preserve">
+  <value>കീ നിർമ്മാണം</value>
+</data>
+<data name="CA_ParamSetsHeader.Text" xml:space="preserve">
+  <value>പാരാമീറ്റർ സെറ്റുകൾ</value>
+</data>
+<data name="CNG_NameHeader.Text" xml:space="preserve">
+  <value>പേര്</value>
+</data>
+<data name="CNG_OidHeader.Text" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="CNG_LengthHeader.Text" xml:space="preserve">
+  <value>പബ്ലിക് കീ ബിറ്റുകൾ</value>
+</data>
+<data name="SSL_NameHeader.Text" xml:space="preserve">
+  <value>പേര്</value>
+</data>
+<data name="SSL_OidHeader.Text" xml:space="preserve">
+  <value>OID</value>
+</data>
+<data name="SSL_LengthHeader.Text" xml:space="preserve">
+  <value>പബ്ലിക് കീ ബിറ്റുകൾ</value>
+</data>
+<data name="SSL_TypeHeader.Text" xml:space="preserve">
+  <value>വക്രത്തിന്റെ തരം</value>
+</data>
+<data name="SSL_FlagsHeader.Text" xml:space="preserve">
+  <value>ഫ്ലാഗുകൾ</value>
+</data>
+<data name="TLS_NameHeader.Text" xml:space="preserve">
+  <value>പേര്</value>
+</data>
+<data name="TLS_CipherHeader.Text" xml:space="preserve">
+  <value>സൈഫർ</value>
+</data>
+<data name="TLS_CSHeader.Text" xml:space="preserve">
+  <value>സൈഫർ സ്യൂട്ട്</value>
+</data>
+<data name="TLS_BaseCSHeader.Text" xml:space="preserve">
+  <value>ബേസ് സൈഫർ സ്യൂട്ട്</value>
+</data>
+<data name="TLS_HashHeader.Text" xml:space="preserve">
+  <value>ഹാഷ്</value>
+</data>
+<data name="TLS_ExchangeHeader.Text" xml:space="preserve">
+  <value>കീ കൈമാറ്റം</value>
+</data>
+<data name="TLS_CertHeader.Text" xml:space="preserve">
+  <value>സർട്ടിഫിക്കറ്റ്</value>
+</data>
+<data name="TLS_CLenHeader.Text" xml:space="preserve">
+  <value>സൈഫർ നീളം</value>
+</data>
+<data name="TLS_CBLenHeader.Text" xml:space="preserve">
+  <value>ബ്ലോക്ക് നീളം</value>
+</data>
+<data name="TLS_HLenHeader.Text" xml:space="preserve">
+  <value>ഹാഷ് നീളം</value>
+</data>
+<data name="TLS_MinExHeader.Text" xml:space="preserve">
+  <value>കുറഞ്ഞ കൈമാറ്റ നീളം</value>
+</data>
+<data name="TLS_MaxExHeader.Text" xml:space="preserve">
+  <value>പരമാവധി കൈമാറ്റ നീളം</value>
+</data>
+<data name="TLS_KeyTypeHeader.Text" xml:space="preserve">
+  <value>കീ തരം</value>
+</data>
+<data name="REG_NameHeader.Text" xml:space="preserve">
+  <value>പേര്</value>
+</data>
+  <data name="GenerateCBOMButton.Content" xml:space="preserve">
+    <value>CBOM സൃഷ്ടിക്കുക</value>
+  </data>
+  <data name="GenerateCBOMButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>നിലവിലെ സിസ്റ്റത്തിനായി ക്രിപ്റ്റോഗ്രാഫിക് ബിൽ ഓഫ് മെറ്റീരിയൽസ് സൃഷ്ടിക്കുക.</value>
+  </data>
+  <data name="GenerateCBOMButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>നിലവിലെ സിസ്റ്റത്തിനായി ക്രിപ്റ്റോഗ്രാഫിക് ബിൽ ഓഫ് മെറ്റീരിയൽസ് സൃഷ്ടിക്കുക.</value>
+  </data>
+  <data name="ViewSelectedFilesTextBlock.Text" xml:space="preserve">
+    <value>നിങ്ങൾ തിരഞ്ഞെടുത്ത ഫയലുകൾ കാണുക.</value>
+  </data>
+  <data name="FileBrowseButton.Content" xml:space="preserve">
+    <value>ബ്രൗസ് ചെയ്യുക</value>
+  </data>
+  <data name="FileBrowseButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>ഫയൽ പിക്കർ ഡയലോഗ് തുറക്കുന്നു, ഇത് നിങ്ങൾക്ക് file(s) തിരഞ്ഞെടുക്കാൻ അനുവദിക്കുന്നു</value>
+  </data>
+  <data name="FileBrowseButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>ഫയൽ പിക്കർ ഡയലോഗ് തുറക്കുന്നു, ഇത് നിങ്ങൾക്ക് file(s) തിരഞ്ഞെടുക്കാൻ അനുവദിക്കുന്നു</value>
   </data>
 </root>
